--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@appunto/aoj-screenshots",
-  "version": "0.0.3-0",
+  "version": "0.0.3",
   "description": "Server side HTMLT to PDF/PNG/... converter",
   "main": "src/index.js",
   "scripts": {
